// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput renders all appearances 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0!important;
}

.emotion-1>div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  border-color: var(--themeBorder, #DADDE2);
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 50%;
  position: relative;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
}

<div
    class="emotion-0"
    data-cy="radioInput"
  >
    <label
      class="emotion-1"
      for="defaultId"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <input
            aria-describedby=""
            aria-invalid="false"
            class="emotion-4"
            data-cy="radioInput-input"
            id="defaultId"
            name="appearanceTest"
            type="radio"
            value="default"
          />
        </div>
      </div>
      <div
        class="emotion-5"
      >
        Sample label
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioInput renders all appearances 2`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0!important;
}

.emotion-1>div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  border-color: var(--themeBorder, #DADDE2);
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 50%;
  position: relative;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  color: var(--themeError, #EB293A);
  fill: var(--themeError, #EB293A);
}

<div
    class="emotion-0"
    data-cy="radioInput radioInput.error"
  >
    <label
      class="emotion-1"
      for="defaultId"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <input
            aria-describedby=""
            aria-invalid="false"
            class="emotion-4"
            data-cy="radioInput-input radioInput-input.error"
            id="defaultId"
            name="appearanceTest"
            type="radio"
            value="default"
          />
        </div>
      </div>
      <div
        class="emotion-5"
      >
        Sample label
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioInput renders all appearances 3`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0!important;
}

.emotion-1>div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  border-color: var(--themeBorder, #DADDE2);
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 50%;
  position: relative;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  color: var(--themeSuccess, #14C684);
  fill: var(--themeSuccess, #14C684);
}

<div
    class="emotion-0"
    data-cy="radioInput radioInput.success"
  >
    <label
      class="emotion-1"
      for="defaultId"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <input
            aria-describedby=""
            aria-invalid="false"
            class="emotion-4"
            data-cy="radioInput-input radioInput-input.success"
            id="defaultId"
            name="appearanceTest"
            type="radio"
            value="default"
          />
        </div>
      </div>
      <div
        class="emotion-5"
      >
        Sample label
      </div>
    </label>
  </div>
</DocumentFragment>
`;
